fecha en title de valor

--- a/views/template_diario.handlebars
+++ b/views/template_diario.handlebars
@@ -46,7 +46,9 @@
           <tr data-id="{{this.id}}" data-series_id="{{this.series_id}}" data-x="{{this.x}}" data-y="{{this.y}}" data-status_color="{{this.status_color}}" data-status_text="{{this.status_text}}" data-percentil="{{this.percentil}}" data-tendencia="{{this.tendencia_text}}" data-aviso="{{this.aviso_text}}">
               <td><div class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="{{this.estacion_nombre}}" data-id="{{this.id}}" data-seccionesurl="{{this.secciones_url}}">{{this.estacion_nombre}}</div></td>
               <td>{{this.rio}}</td>
-              <td style="background-color: {{this.status_color}} !important;">{{this.valor}} {{{this.tendencia}}}</td>
+              <td style="background-color: {{this.status_color}} !important;">
+                <span title="fecha: {{this.fecha}}" style="cursor: default;">{{this.valor}} </span> {{{this.tendencia}}}
+              </td>
               <td>{{this.alerta}}</td>
               <td>{{this.evacuacion}}</td>
               <td>{{this.perspectiva}}</td>
@@ -70,7 +72,9 @@
           <tr data-id="{{this.id}}" data-series_id="{{this.series_id}}" data-x="{{this.x}}" data-y="{{this.y}}" data-status_color="{{this.status_color}}" data-status_text="{{this.status_text}}" data-percentil="{{this.percentil}}" data-tendencia="{{this.tendencia_text}}" data-aviso="{{this.aviso_text}}">
               <td><div class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="{{this.estacion_nombre}}" data-id="{{this.id}}" data-seccionesurl="{{this.secciones_url}}">{{this.estacion_nombre}}</div></td>
               <td>{{this.rio}}</td>
-              <td style="background-color: {{this.status_color}} !important;">{{this.valor}} {{{this.tendencia}}}</td>
+              <td style="background-color: {{this.status_color}} !important;">
+                <span title="fecha: {{this.fecha}}" style="cursor: default;">{{this.valor}} </span> {{{this.tendencia}}}
+              </td>
               <td>{{this.alerta}}</td>
               <td>{{this.evacuacion}}</td>
               <td>{{this.perspectiva}}</td>
