cambio titulo seccion graficos

--- a/views/reporte_diario.handlebars
+++ b/views/reporte_diario.handlebars
@@ -375,7 +375,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body d-flex flex-column text-center gap-2">
-              <a href="#hidrograma-0" id="hidrograma-link" class="btn btn-link" onclick="closeModal()">hidrograma</a>
+              <a href="#hidrograma-0" id="hidrograma-link" class="btn btn-link" onclick="closeModal()">gráfico de previsión</a>
               <a href="" target="_blank" id="secciones-link" class="btn btn-link" onclick="closeModal()">visualizador
                 (en pestaña nueva)</a>
             </div>
