--- a/views/template_diario.handlebars
+++ b/views/template_diario.handlebars
@@ -93,7 +93,7 @@
       </tr>
     </table>
     <div class="paragraph">{{texto_hidro}}</div>
-    <h4>Hidrogramas</h4>
+    <h4>Gráficos de nivel observado y previsión</h4>
     {{#each hidrogramas}}
         <div class="accordion">
           <div class="accordion-header">{{this.river}} - {{this.name}}</div>
