--- a/views/template_diario.handlebars
+++ b/views/template_diario.handlebars
@@ -47,7 +47,7 @@
               <td><div class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="{{this.estacion_nombre}}" data-id="{{this.id}}" data-seccionesurl="{{this.secciones_url}}">{{this.estacion_nombre}}</div></td>
               <td>{{this.rio}}</td>
               <td style="background-color: {{this.status_color}} !important;">
-                <span title="fecha: {{this.fecha}}" style="cursor: default;">{{this.valor}} </span> {{{this.tendencia}}}
+                <a href="#" title="fecha: {{this.fecha}}&#013;{{this.valor}} m" data-bs-toggle="tooltip" data-bs-placement="top">{{this.valor}} </a> {{{this.tendencia}}}
               </td>
               <td>{{this.alerta}}</td>
               <td>{{this.evacuacion}}</td>
@@ -73,7 +73,7 @@
               <td><div class="as-link" data-bs-toggle="modal" data-bs-target="#hidrolinksModal" style="cursor:pointer;" data-title="{{this.estacion_nombre}}" data-id="{{this.id}}" data-seccionesurl="{{this.secciones_url}}">{{this.estacion_nombre}}</div></td>
               <td>{{this.rio}}</td>
               <td style="background-color: {{this.status_color}} !important;">
-                <span title="fecha: {{this.fecha}}" style="cursor: default;">{{this.valor}} </span> {{{this.tendencia}}}
+                <a href="#" title="fecha: {{this.fecha}}&#013;{{this.valor}} m&#179;/s" data-bs-toggle="tooltip" data-bs-placement="top">{{this.valor}} </a> {{{this.tendencia}}}
               </td>
               <td>{{this.alerta}}</td>
               <td>{{this.evacuacion}}</td>
