--- a/views/reporte_diario.handlebars
+++ b/views/reporte_diario.handlebars
@@ -322,7 +322,8 @@
 
     <div id="landscape-warning" class="{{landscape_warning_class}}">Por favor rote su dispositivo</div>
     <div class="print-header">
-      <img src="img/membrete-2025_con_logo_slhi.jpg" alt="Instituto Nacional del Agua" />
+      <img src="img/membrete-2026.png" alt="Instituto Nacional del Agua" /> 
+      {{!-- "img/membrete-2025_con_logo_slhi.jpg" --}}
     </div>
     <main role="main">
       <div class="panel-pane pane-encabezados">
